welcome.lessons.welcome.bat.bool1.IcyHot.scala.code
def icyHot(temp1:Int, temp2:Int):Boolean = {
if((temp&*temp2)<-99)
return true ;
}
